# HDR-Class

./: ByteBuffer.h  CMakeLists.txt  README.md  hdr.cpp  hdr.h  hdrv2.cpp  hdrv2.h
.github/workflows/: build.yml
include/: hdr.h
src/: hdr.cpp  main.cpp
